[gd_scene load_steps=3 format=3 uid="uid://dcg0nacjk40mw"]

[ext_resource type="Script" path="res://scenes/camera/camera_limiter.gd" id="1_h2883"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_02smq"]
size = Vector2(228.5, 174)

[node name="CameraLimiter" type="Area2D"]
position = Vector2(94, 860)
script = ExtResource("1_h2883")
limit_x = 1
limit_y = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(425, 33)
shape = SubResource("RectangleShape2D_02smq")

[node name="CamPosition" type="Marker2D" parent="."]
position = Vector2(897, 326)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
